--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
           </nav>
       
-          <script src="./ham_menu.js"></script>
+          <script src="./app.js"></script>
         
         <header class = "homepage">  
             <a href="apraksts.html"><button>Nospied mani!!</button></a> 
